--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,24 @@
     <link rel="stylesheet" href="https://use.typekit.net/geb2yvq.css" />
   </head>
   <body>
+    <div class="about">
+      <div class="about__container">
+        <span class="about__close material-symbols-outlined" data-about="close"> close </span>
+        <div class="about__wrapper">
+          <h1 class="about__title">About</h1>
+          <p class="about__text">
+            Many would say that the father of facial recognition was Woodrow Wilson Bledsoe. Working in the 1960s, Bledsoe developed a system that could classify photos of faces by hand using what’s known as a RAND tablet, a device that people could use to input horizontal and vertical coordinates on a grid using a stylus that emitted electromagnetic pulses. The system could be used to manually record the coordinate locations of various facial features including the eyes, nose, hairline and mouth.<br /><br />
+            These metrics could then be inserted in a database. Then, when the system was given a new photograph of an individual, it was able to retrieve the image from the database that most closely resembled that individual. At the time, face recognition was unfortunately limited severely by the technology of the era and computer processing power. However, it was an important first step in proving that face recognition was a viable bio metric.
+          </p>
+          <img src="./static/facemesh.png" />
+          <p>
+            <span>2022 © ADRIÁN GUBRICA<a href="https://www.gubrica.com" target="_blank">www.gubrica.com</a></span>
+          </p>
+        </div>
+        <div class="about__gradient about__gradient--top"></div>
+        <div class="about__gradient about__gradient--bottom"></div>
+      </div>
+    </div>
     <div class="controls">
       <div class="controls__wrapper">
         <div class="controls__logo">
@@ -19,9 +37,10 @@
           <h5 data-controls="item">History</h5>
         </div>
         <img src="./static/thumbnail-min.png" class="controls__image" data-controls="item" />
-        <p class="controls__text" data-controls="item">Discover the evolution of Face Recognition technologies</p>
+        <p class="controls__text" data-controls="item">Discover the evolution of Face Recognition technologies in an interactive</p>
         <button class="controls__button" data-controls="item">Get Started<span class="material-symbols-outlined"> arrow_right_alt </span></button>
       </div>
+      <p class="controls__loading__text"><span class="material-symbols-outlined"> videocam </span><br />Please allow the camera to be used by the app <br /><span class="hint">The app does not store any data from the camera</span></p>
       <div class="controls__loading">
         <div class="lds-ring">
           <div></div>
@@ -34,10 +53,7 @@
     <div class="menu">
       <div class="menu__container">
         <p class="menu__logo">Facial Recognition <span>History</span></p>
-        <!--<div class="menu__icon">
-          <div class="menu__icon__line"></div>
-          <div class="menu__icon__line"></div>
-        </div> -->
+        <p class="menu__about" data-about="open">About</p>
       </div>
     </div>
     <div class="ui__extra__text">
@@ -46,6 +62,12 @@
       <p class="ui__extra__text__content">A mathematical representation of the face is created</p>
     </div>
     <nav>
+      <div class="ui__sources">
+        <div class="ui__sources__wrapper">
+          <h1 class="ui__sources__title">Interesting Topics</h1>
+          <div class="ui__sources__item"></div>
+        </div>
+      </div>
       <div class="ui__extra">
         <button class="ui__extra__btn ui__extra__btn--1 ui__extra__btn--active">Step 1</button>
         <button class="ui__extra__btn ui__extra__btn--2">Step 2</button>
@@ -70,7 +92,7 @@
                   Many would say that the father of facial recognition was Woodrow Wilson Bledsoe. Working in the 1960s, Bledsoe developed a system that could classify photos of faces by hand using what’s known as a RAND tablet, a device that people could use to input horizontal and vertical coordinates on a grid using a stylus that emitted electromagnetic pulses. The system could be used to manually record the coordinate locations of various facial features including the eyes, nose, hairline and mouth.<br /><br />
                   These metrics could then be inserted in a database. Then, when the system was given a new photograph of an individual, it was able to retrieve the image from the database that most closely resembled that individual. At the time, face recognition was unfortunately limited severely by the technology of the era and computer processing power. However, it was an important first step in proving that face recognition was a viable bio metric.
                 </p>
-                <p class="source">Source: <a href="https://medium.com/coinmonks/from-the-rand-tablet-to-differentiating-identical-twins-aa4ba6031bb0">www.medium.com</a></p>
+                <p class="source">Source: <a href="https://medium.com/coinmonks/from-the-rand-tablet-to-differentiating-identical-twins-aa4ba6031bb0" target="_blank">www.medium.com</a></p>
               </div>
             </div>
           </div>
@@ -88,7 +110,7 @@
                 <h1>Using 21 subjective facial markers for automated face recognition</h1>
                 <img src="./static/21.webp" />
                 <p>Goldstein, Harmon, and Lesk used 21 specific subjective markers, such as hair color and lip thickness, to automate the recognition. The measurements and locations needed to be manually computed, causing the program to require a lot of labor time. But it provided a better accuracy as compared to the RAND Tablet technology.</p>
-                <p class="source">Source: <a href="https://medium.com/coinmonks/from-the-rand-tablet-to-differentiating-identical-twins-aa4ba6031bb0">www.medium.com</a></p>
+                <p class="source">Source: <a href="https://medium.com/coinmonks/from-the-rand-tablet-to-differentiating-identical-twins-aa4ba6031bb0" target="_blank">www.medium.com</a></p>
               </div>
             </div>
           </div>
@@ -109,7 +131,7 @@
                   In 1988, Sirovich and Kirby began applying linear algebra to the problem of facial recognition. What became known as the Eigenface approach started as a search for a low-dimensional representation of facial images. Sirovich and Kriby were able to show that feature analysis on a collection of facial images could form a set of basic features. They were also able to show that less than one hundred values were required in order to accurately code a normalized face image.<br /><br />
                   In 1991, Turk and Pentland expanded upon the Eigenface approach by discovering how to detect faces within images. This led to the first instances of automatic face recognition. Their approach was constrained by technological and environmental factors, but it was a significant breakthrough in proving the feasibility of automatic facial recognition.
                 </p>
-                <p class="source">Source: <a href="https://medium.com/coinmonks/from-the-rand-tablet-to-differentiating-identical-twins-aa4ba6031bb0">www.medium.com</a></p>
+                <p class="source">Source: <a href="https://medium.com/coinmonks/from-the-rand-tablet-to-differentiating-identical-twins-aa4ba6031bb0" target="_blank">www.medium.com</a></p>
               </div>
             </div>
           </div>
@@ -130,7 +152,7 @@
                   The year 2010 marked a great change in the social media platforms all over the world, when Facebook introduced the photo tagging feature for it’s user. What this basically does is that when a person tags a photo, the system automatically recognizes the face of everyone which is present in that photo, but only if that person is a part of the Facebook family.<br /><br />
                   But this feature was not at all accurate, and was rather a Hit and miss success rate. It had difficulty in recognizing side faces, blurred images, etc. So, this when Facebook got into developing this technology along with other tech giants like Google and IBM.
                 </p>
-                <p class="source">Source: <a href="https://medium.com/coinmonks/from-the-rand-tablet-to-differentiating-identical-twins-aa4ba6031bb0">www.medium.com</a></p>
+                <p class="source">Source: <a href="https://medium.com/coinmonks/from-the-rand-tablet-to-differentiating-identical-twins-aa4ba6031bb0" target="_blank">www.medium.com</a></p>
               </div>
             </div>
           </div>
@@ -153,7 +175,15 @@
                   The interesting thing is that the 4 million images using to train this system were taken from the profile of just 4030 active Facebook users! The accuracy of this system is 97.35%, which is still 0.28% less than that of a human.
                 </p>
 
-                <p class="source">Source: <a href="https://medium.com/coinmonks/from-the-rand-tablet-to-differentiating-identical-twins-aa4ba6031bb0">www.medium.com</a></p>
+                <p class="source">Source: <a href="https://medium.com/coinmonks/from-the-rand-tablet-to-differentiating-identical-twins-aa4ba6031bb0" target="_blank">www.medium.com</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="ui__names__name">
+            <div class="ui__names__name__content">
+              <h2 class="ui__names__name__title">Now and the Future</h2>
+              <div class="ui__names__name__toggle ui__names__name__toggle--active">
+                <span class="ui__names__name__toggle__icon material-symbols-outlined"> arrow_forward_ios </span>
               </div>
             </div>
           </div>
@@ -179,6 +209,10 @@
           </div>
           <div class="ui__years__year">
             <p class="ui__years__year__value">2015</p>
+            <div class="ui__years__year__mark"></div>
+          </div>
+          <div class="ui__years__year">
+            <p class="ui__years__year__value">2023</p>
             <div class="ui__years__year__mark"></div>
           </div>
           <div class="ui__years__line"></div>
